tests/config_all_weak/config_all_weak.exp
Error ------------------------------------------------------------------------------------------------ no_at_flow.js:1:5

Variable `x` [1] is never initialized, annotated, or assigned to. [invalid-declaration]

   1| var x;
          ^ [1]


Error ------------------------------------------------------------------------------------------------ no_at_flow.js:3:3

Cannot get `x.length` because property `length` is missing in uninitialized variable [1]. [incompatible-use]

   no_at_flow.js:3:3
   3| x.length;
        ^^^^^^

References:
   no_at_flow.js:1:5
   1| var x;
          ^ [1]



Found 2 errors
